# pywebview-desktop-template

./: .gitignore  README.md  README_EN.md  pyproject.toml
backend/: config.py  db.py  logger.py  main.py  tray.py
backend/api/: __init__.py  file.py  license.py  shell.py  storage.py  system.py
config/: app_config.py
config/secret/: __init__.py  cipher.py  fingerprint.py  kdf.py  license.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/scripts/: dev.js
frontend/src/: App.tsx  bridge.ts  main.tsx  theme.ts
frontend/src/components/: ErrorBoundary.tsx  Toast.tsx
frontend/src/context/: ToastContext.tsx
frontend/src/contexts/: LicenseContext.tsx  ThemeContext.tsx
frontend/src/hooks/: useCountdown.ts
frontend/src/pages/: Calculator.tsx  ColorTool.tsx  Encoder.tsx  FileDemo.tsx  JsonTool.tsx  LicenseDemo.tsx  Notes.tsx  Settings.tsx  SysInfo.tsx  Timer.tsx
frontend/src/styles/: app.css  global.css
scripts/: build.py  build.spec  build_onefile.spec  dev.py  gen_keypair.py  gen_license.py  hook_pythonnet.py  obfuscate.py
